# rachaels-transcriber

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  biome.json  build_mac.sh  build_win.bat  build_win.ps1  create_icon.py  download_models.py  engine.py  gui.py  index.html  installer.iss  package.json  pnpm-lock.yaml  recorder.py  requirements.txt  run.bat  run.sh  setup_mac.sh  theme.json  transcribe.py  tsconfig.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: build.yml
assets/: icon.icns
docs/: developer-guide.md
hooks/: hook-sounddevice.py  hook-webrtcvad.py
scripts/: clean_portaudio.py
src/: App.tsx  app.rs  config.rs  download_models.rs  index.css  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  download_models.rs  lib.rs  main.rs
src-tauri/src/engine/: chunk.rs  mod.rs  whisper.rs
src-tauri/src/recorder/: mod.rs  vad.rs
src/components/: FileTranscribe.tsx  Landing.tsx  Layout.tsx  LiveRecord.tsx
src/engine/: chunk.rs  whisper.rs
src/lib/: commands.ts  events.ts
src/recorder/: mod.rs  vad.rs
