[package]
name = "rachaels-transcriber"
version = "0.1.0"
edition = "2021"
description = "Local offline audio transcription with Whisper"

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-build = "2"

# Whisper inference
whisper-rs = "0.13"

# Pure Rust audio decoding (replaces ffmpeg)
symphonia = { version = "0.5", features = ["mp3", "vorbis", "flac", "pcm", "isomp4", "ogg", "wav"] }

# Audio capture (replaces sounddevice)
cpal = "0.15"

# Voice Activity Detection
webrtc-vad = "0.1"

# Native file dialogs (used from Rust backend)
rfd = "0.17"

# CLI (separate from Tauri)
clap = { version = "4", features = ["derive"] }

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Audio resampling
rubato = "0.16"

# WAV writing (for recordings)
hound = "3.5"

# Atomic + threading helpers
parking_lot = "0.12"

# Embed icon
rust-embed = "8"

# Logging
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
